changing media query to test bug on iphone

--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -2,7 +2,8 @@
 @media only screen and (max-width: 600px) {
 
   #wrapper {
-    flex-direction: column;
+    /* flex-direction: column; */
+    display: block;
   }
 
   #hero {
